# auto

./: .env.example  .gitignore  README.md  pyproject.toml
.github/scripts/: process_queue.py
.github/workflows/: queue-email.yml
docs/: 01-pesquisa-algoritmo-tiktok.md  02-nicho-cortes.md  03-arquitetura-automacao.md  04-growth-bandit.md  05-tiktok-review-submission.md
github_queue/items/: 10d20d21512c.json  b844aeb7e1dc.json  ecd00a84961c.json
review-site/: index.html  privacy.html  script.js  styles.css  terms.html  tiktok0uHGZNyk1Iq6Qgd25F07Y4eaIj8wF8lr.txt
src/tiktok_automation/: __main__.py  cli.py  config.py  schemas.py  utils.py  web.py
src/tiktok_automation/learning/: bandit.py
src/tiktok_automation/pipeline/: clip_scoring.py  orchestrator.py  rendering.py  smart_crop.py  subtitles.py  transcription.py  youtube_ingest.py
src/tiktok_automation/web_assets/: app.css  app.js  index.html
