[project]
name = "tiktok-automation"
version = "0.1.0"
description = "Pipeline para pesquisar, cortar, legendar e publicar videos curtos no TikTok com foco em alcance."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.12",
  "faster-whisper>=1.1.1",
  "opencv-python-headless>=4.10.0.84",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.4.0",
  "requests>=2.32.3",
  "rich>=13.9.4",
  "typer>=0.12.5",
  "uvicorn>=0.34.0",
  "yt-dlp>=2025.2.19",
]

[project.scripts]
tiktok-automation = "tiktok_automation.cli:app"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"tiktok_automation" = [
  "web_assets/*.css",
  "web_assets/*.html",
  "web_assets/*.js",
]
